<resources>
    <string name="app_name">hel-project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_title">Chat channels</string>
    <string name="register">Register a new account</string>
    <string name="nickname">nickname</string>
    <string name="email">email</string>
    <string name="password">password</string>

    <string name="register_button">Join now</string>
    <string name="login">Login</string>
    <string name="orregister">or create a new account here</string>
    <string name="Logout">Log out</string>
    <string name="shared_preferences">prefs_key</string>
    <string name="search_title">Find new hobbies</string>
    <string name="swipe_message">Start by swiping some hobbies and find something that might interest you!</string>
    <string name="swipe_no_items">No more hobbies right now</string>


</resources>
