<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout

        android:id="@+id/bottom_image"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tausta_fade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/top_gradient2"
    android:padding="30dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="0dp"
        android:paddingBottom="20dp"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText

        android:id="@+id/nickname"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/nickname"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhiteTrans"
        android:textSize="18sp" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorWhite" />


    <EditText
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:drawableStart="@drawable/ic_baseline_email_24px"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhiteTrans"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorWhite" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        app:passwordToggleEnabled="true"
        app:hintAnimationEnabled="false"

        app:hintEnabled="false"
        android:textColorHint="@color/colorWhiteTrans"
        app:passwordToggleTint="@color/colorWhite"
        >
    <android.support.design.widget.TextInputEditText
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:drawableStart="@drawable/ic_baseline_lock_24px"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        app:hintEnabled="false"

        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhiteTrans"
        android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorWhite" />


    <RelativeLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/signup_button"
        android:minWidth="160dp"
        android:minHeight="50dp"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent"
        android:text="@string/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>


</RelativeLayout>